# oxonfair

./: .gitignore  pyproject.toml  ruff.toml
ensemble_results/: ensemble_results-adult-n3-i1.csv  ensemble_results-adult-n3-i3.csv  ensemble_results-adult-n5-i3.csv  ensemble_results-compas-n2-i1.csv  ensemble_results-compas-n3-i1.csv  ensemble_results-compas-n3-i3.csv  ensemble_results-compas-n5-i1.csv  ensemble_results-compas-n5-i2.csv  ensemble_results-compas-n5-i3.csv  ensemble_results-compas-n7-i1.csv  ensemble_results-compas-n7-i2.csv  ensemble_results-n3-i1.csv  ensemble_results-n3-i2.csv  ensemble_results-n3-i3.csv  ensemble_results-n5.csv  ensemble_results.csv  individual_metrics-adult-n3-i0.csv  individual_metrics-adult-n3-i1.csv  individual_metrics-adult-n3-i2.csv  individual_metrics-adult-n5-i0.csv  individual_metrics-adult-n5-i1.csv  individual_metrics-adult-n5-i2.csv  individual_metrics-compas-i0.csv  individual_metrics-compas-n3-i0.csv  individual_metrics-compas-n3-i2.csv  individual_metrics-compas-n5-i0.csv  individual_metrics-compas-n5-i1.csv  individual_metrics-compas-n5-i2.csv  individual_metrics-compas-n7-i0.csv  individual_metrics-compas-n7-i1.csv  individual_metrics_2groups.csv  individual_metrics_original-i0.csv  individual_metrics_original-i1.csv  individual_metrics_original-i2.csv  individual_metrics_original.csv  single_threshold_metrics_2groups-i3.csv  single_threshold_metrics_2groups.csv  single_threshold_metrics_adult-i1.csv  single_threshold_metrics_adult-n3-i1.csv  single_threshold_metrics_adult-n3-i3.csv  (+27 more)
examples/: adult_ensemble.py  (+9 more)
